Fix displaying border-radius on mobile

--- a/scss/_toast.scss
+++ b/scss/_toast.scss
@@ -50,5 +50,6 @@
 @media #{$rt-mobile} {
   .#{$rt-namespace}__toast {
     margin-bottom: 0;
+    border-radius: 0;
   }
 }
